@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-27T16:22:01Z",
-  "count" : 25,
-  "count_minmax" : [ 2, 25 ],
-  "count_decinc" : [ -0, +25 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2023-09-28T01:11:36Z",
+  "count" : 29,
+  "count_minmax" : [ 2, 29 ],
+  "count_decinc" : [ -0, +29 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 1, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
 }
