@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-27T16:22:01Z",
+  "timestamp" : "2023-09-28T01:11:36Z",
   "count_outdated" : 865,
   "uniques_outdated" : 258,
-  "count" : 906,
-  "uniques" : 266,
+  "count" : 910,
+  "uniques" : 267,
   "views" : [
     {
       "timestamp": "2023-09-16T00:00:00Z",
@@ -52,12 +52,12 @@
     },
     {
       "timestamp": "2023-09-27T00:00:00Z",
-      "count": 25,
-      "count_minmax": [ 2, 25 ],
-      "count_decinc": [ 0, 25 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 29,
+      "count_minmax": [ 2, 29 ],
+      "count_decinc": [ 0, 29 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
