@@ -1,6 +1,6 @@
 {
-  "count": 41,
-  "uniques": 8,
+  "count": 45,
+  "uniques": 9,
   "views": [
     {
       "timestamp": "2023-09-16T00:00:00Z",
@@ -29,8 +29,8 @@
     },
     {
       "timestamp": "2023-09-27T00:00:00Z",
-      "count": 25,
-      "uniques": 2
+      "count": 29,
+      "uniques": 3
     }
   ]
 }
