@@ -1,3 +1,12 @@
+2023-09-28T01:11:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6333290439 # 1204
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-28
+* notice: last 14d: unq all: 9 45
+* notice: prev accum: outdated-unq outdated-all / unq all: 258 865 / 266 906
+* notice: next accum: outdated-unq outdated-all / unq all: 258 865 / 267 910
+* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +3 +29 -0 -0 / 3 29
+* notice: removed / changed dates: [] / [2023-09-27]
+
 2023-09-27T16:22:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6328703994 # 1203
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-27
